Componentes/Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHARACTER
    DOUBLE_QUOTATION_MARK
    ELSE
    FOR
    FROM
    IMPL
    IN
    MATCH
    NOT
    QUOTATION_MARK
    RAND
    SELF
    STRUCT
    WHILE

Grammar

Rule 0     S' -> codigoRust
Rule 1     codigoRust -> functions fnmain functions
Rule 2     codigoRust -> functions fnmain
Rule 3     codigoRust -> fnmain functions
Rule 4     codigoRust -> fnmain
Rule 5     functions -> funcion
Rule 6     functions -> funcion functions
Rule 7     programa -> sentencias
Rule 8     programa -> sentencias programa
Rule 9     asignacion_variable -> LET IDENTIFIER ASIG valor
Rule 10    asignacion_variable -> LET MUT IDENTIFIER ASIG valor
Rule 11    asignacion_variable -> LET IDENTIFIER COLON asignacion
Rule 12    asignacion_variable -> LET MUT IDENTIFIER COLON asignacion
Rule 13    declaracion_variable -> LET IDENTIFIER
Rule 14    declaracion_variable -> LET MUT IDENTIFIER
Rule 15    declaracion_variable -> LET IDENTIFIER COLON asig_data_type
Rule 16    declaracion_variable -> LET MUT IDENTIFIER COLON asig_data_type
Rule 17    asignacion -> string_asignacion
Rule 18    asignacion -> numero_asignacion
Rule 19    asignacion -> boolean_asignacion
Rule 20    asignacion -> lista_asignacion
Rule 21    asignacion -> tupla_asignacion
Rule 22    string_asignacion -> REFERENCE STR ASIG STRING
Rule 23    numero_asignacion -> signed_integer ASIG INTEGER
Rule 24    numero_asignacion -> signed_integer ASIG MINUS INTEGER
Rule 25    numero_asignacion -> unsigned_integer ASIG INTEGER
Rule 26    numero_asignacion -> float_type ASIG FLOAT
Rule 27    numero_asignacion -> float_type ASIG MINUS FLOAT
Rule 28    boolean_asignacion -> BOOL ASIG TRUE
Rule 29    boolean_asignacion -> BOOL ASIG FALSE
Rule 30    lista_asignacion -> list_type ASIG arreglos
Rule 31    tupla_asignacion -> tuple_type ASIG tuplas
Rule 32    comparacion -> valor EQ valor
Rule 33    comparacion -> valor NEQ valor
Rule 34    comparacion -> valor GEQ valor
Rule 35    comparacion -> valor LEQ valor
Rule 36    comparacion -> valor RIGHTARROW valor
Rule 37    comparacion -> valor LEFTARROW valor
Rule 38    valor -> INTEGER
Rule 39    valor -> FLOAT
Rule 40    valor -> IDENTIFIER
Rule 41    valor -> operacion
Rule 42    valor -> indexacion
Rule 43    valor -> arreglos
Rule 44    valor -> STRING
Rule 45    valor -> booleanos
Rule 46    booleanos -> TRUE
Rule 47    booleanos -> FALSE
Rule 48    vacio -> <empty>
Rule 49    sentencias -> asignacion_variable SEMICOLON
Rule 50    sentencias -> declaracion_variable SEMICOLON
Rule 51    sentencias -> impresion SEMICOLON
Rule 52    sentencias -> ingreso_datos SEMICOLON
Rule 53    sentencias -> arreglos SEMICOLON
Rule 54    sentencias -> control_structure
Rule 55    sentencias -> llamada SEMICOLON
Rule 56    impresion -> PRINTLN EXCLAMATION LPAREN valor RPAREN
Rule 57    impresion -> PRINTLN EXCLAMATION LPAREN valor COMMA valores RPAREN
Rule 58    funcion -> FN IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
Rule 59    funcion -> FN IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
Rule 60    funcion -> FN IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
Rule 61    funcion -> FN IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
Rule 62    retorno -> RETURN valor SEMICOLON
Rule 63    parameters -> IDENTIFIER COLON asig_data_type
Rule 64    parameters -> IDENTIFIER COLON asig_data_type COMMA parameters
Rule 65    parameters -> vacio
Rule 66    ingreso_datos -> STD DOUBLE_COLON IO DOUBLE_COLON DOT STDIN LPAREN RPAREN DOT READLINE LPAREN REFERENCE MUT IDENTIFIER RPAREN
Rule 67    asig_data_type -> data_type
Rule 68    asig_data_type -> list_type
Rule 69    asig_data_type -> tuple_type
Rule 70    list_type -> LCORCH some_data_type RCORCH
Rule 71    tuple_type -> LPAREN some_data_type RPAREN
Rule 72    data_type -> CHAR
Rule 73    data_type -> REFERENCE STR
Rule 74    data_type -> signed_integer
Rule 75    data_type -> unsigned_integer
Rule 76    data_type -> float_type
Rule 77    data_type -> BOOL
Rule 78    signed_integer -> I8
Rule 79    signed_integer -> I16
Rule 80    signed_integer -> I32
Rule 81    signed_integer -> I64
Rule 82    signed_integer -> I128
Rule 83    signed_integer -> ISIZE
Rule 84    unsigned_integer -> U8
Rule 85    unsigned_integer -> U16
Rule 86    unsigned_integer -> U32
Rule 87    unsigned_integer -> U64
Rule 88    unsigned_integer -> U128
Rule 89    unsigned_integer -> USIZE
Rule 90    float_type -> F32
Rule 91    float_type -> F64
Rule 92    some_data_type -> data_type
Rule 93    some_data_type -> data_type COMMA some_data_type
Rule 94    control_structure -> condicional
Rule 95    arreglos -> LCORCH valores RCORCH
Rule 96    tuplas -> LPAREN valores RPAREN
Rule 97    valores -> valor
Rule 98    valores -> valor COMMA valores
Rule 99    conector -> AND
Rule 100   conector -> OR
Rule 101   proposicion -> comparacion conector proposicion
Rule 102   proposicion -> comparacion
Rule 103   condicional -> IF comparacion LLLAVE programa RLLAVE
Rule 104   condicional -> IF proposicion LLLAVE programa RLLAVE
Rule 105   numeric -> INTEGER
Rule 106   numeric -> FLOAT
Rule 107   numeric -> IDENTIFIER
Rule 108   cadena -> STRING
Rule 109   cadena -> IDENTIFIER
Rule 110   operacion -> numeric PLUS numeric
Rule 111   operacion -> numeric MINUS numeric
Rule 112   operacion -> numeric TIMES numeric
Rule 113   operacion -> numeric DIVIDE numeric
Rule 114   operacion -> numeric MOD numeric
Rule 115   operacion -> numeric INTD numeric
Rule 116   operacion -> cadena PLUS cadena
Rule 117   indexacion -> IDENTIFIER LCORCH INTEGER RCORCH
Rule 118   llamada -> IDENTIFIER LPAREN valores RPAREN
Rule 119   llamada -> IDENTIFIER LPAREN RPAREN
Rule 120   fnmain -> FN MAIN LPAREN RPAREN LLLAVE programa RLLAVE

Terminals, with rules where they appear

AND                  : 99
ASIG                 : 9 10 22 23 24 25 26 27 28 29 30 31
BOOL                 : 28 29 77
CHAR                 : 72
CHARACTER            : 
COLON                : 11 12 15 16 63 64
COMMA                : 57 64 93 98
DIVIDE               : 113
DOT                  : 66 66
DOUBLE_COLON         : 66 66
DOUBLE_QUOTATION_MARK : 
ELSE                 : 
EQ                   : 32
EXCLAMATION          : 56 57
F32                  : 90
F64                  : 91
FALSE                : 29 47
FLOAT                : 26 27 39 106
FN                   : 58 59 60 61 120
FOR                  : 
FROM                 : 
GEQ                  : 34
I128                 : 82
I16                  : 79
I32                  : 80
I64                  : 81
I8                   : 78
IDENTIFIER           : 9 10 11 12 13 14 15 16 40 58 59 60 61 63 64 66 107 109 117 118 119
IF                   : 103 104
IMPL                 : 
IN                   : 
INTD                 : 115
INTEGER              : 23 24 25 38 105 117
IO                   : 66
ISIZE                : 83
LCORCH               : 70 95 117
LEFTARROW            : 37
LEQ                  : 35
LET                  : 9 10 11 12 13 14 15 16
LLLAVE               : 58 59 60 61 103 104 120
LPAREN               : 56 57 58 59 60 61 66 66 71 96 118 119 120
MAIN                 : 120
MATCH                : 
MINUS                : 24 27 60 61 111
MOD                  : 114
MUT                  : 10 12 14 16 66
NEQ                  : 33
NOT                  : 
OR                   : 100
PLUS                 : 110 116
PRINTLN              : 56 57
QUOTATION_MARK       : 
RAND                 : 
RCORCH               : 70 95 117
READLINE             : 66
REFERENCE            : 22 66 73
RETURN               : 62
RIGHTARROW           : 36 60 61
RLLAVE               : 58 59 60 61 103 104 120
RPAREN               : 56 57 58 59 60 61 66 66 71 96 118 119 120
SELF                 : 
SEMICOLON            : 49 50 51 52 53 55 62
STD                  : 66
STDIN                : 66
STR                  : 22 73
STRING               : 22 44 108
STRUCT               : 
TIMES                : 112
TRUE                 : 28 46
U128                 : 88
U16                  : 85
U32                  : 86
U64                  : 87
U8                   : 84
USIZE                : 89
WHILE                : 
error                : 

Nonterminals, with rules where they appear

arreglos             : 30 43 53
asig_data_type       : 15 16 63 64
asignacion           : 11 12
asignacion_variable  : 49
boolean_asignacion   : 19
booleanos            : 45
cadena               : 116 116
codigoRust           : 0
comparacion          : 101 102 103
condicional          : 94
conector             : 101
control_structure    : 54
data_type            : 60 61 67 92 93
declaracion_variable : 50
float_type           : 26 27 76
fnmain               : 1 2 3 4
funcion              : 5 6
functions            : 1 1 2 3 6
impresion            : 51
indexacion           : 42
ingreso_datos        : 52
list_type            : 30 68
lista_asignacion     : 20
llamada              : 55
numeric              : 110 110 111 111 112 112 113 113 114 114 115 115
numero_asignacion    : 18
operacion            : 41
parameters           : 58 60 64
programa             : 8 58 59 60 61 103 104 120
proposicion          : 101 104
retorno              : 60 61
sentencias           : 7 8
signed_integer       : 23 24 74
some_data_type       : 70 71 93
string_asignacion    : 17
tupla_asignacion     : 21
tuplas               : 31
tuple_type           : 31 69
unsigned_integer     : 25 75
vacio                : 65
valor                : 9 10 32 32 33 33 34 34 35 35 36 36 37 37 56 57 62 97 98
valores              : 57 95 96 98 118

Parsing method: LALR

state 0

    (0) S' -> . codigoRust
    (1) codigoRust -> . functions fnmain functions
    (2) codigoRust -> . functions fnmain
    (3) codigoRust -> . fnmain functions
    (4) codigoRust -> . fnmain
    (5) functions -> . funcion
    (6) functions -> . funcion functions
    (120) fnmain -> . FN MAIN LPAREN RPAREN LLLAVE programa RLLAVE
    (58) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> . FN IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> . FN IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    FN              shift and go to state 5

    codigoRust                     shift and go to state 1
    functions                      shift and go to state 2
    fnmain                         shift and go to state 3
    funcion                        shift and go to state 4

state 1

    (0) S' -> codigoRust .



state 2

    (1) codigoRust -> functions . fnmain functions
    (2) codigoRust -> functions . fnmain
    (120) fnmain -> . FN MAIN LPAREN RPAREN LLLAVE programa RLLAVE

    FN              shift and go to state 7

    fnmain                         shift and go to state 6

state 3

    (3) codigoRust -> fnmain . functions
    (4) codigoRust -> fnmain .
    (5) functions -> . funcion
    (6) functions -> . funcion functions
    (58) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> . FN IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> . FN IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    $end            reduce using rule 4 (codigoRust -> fnmain .)
    FN              shift and go to state 9

    functions                      shift and go to state 8
    funcion                        shift and go to state 4

state 4

    (5) functions -> funcion .
    (6) functions -> funcion . functions
    (5) functions -> . funcion
    (6) functions -> . funcion functions
    (58) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> . FN IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> . FN IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

  ! shift/reduce conflict for FN resolved as shift
    $end            reduce using rule 5 (functions -> funcion .)
    FN              shift and go to state 9

  ! FN              [ reduce using rule 5 (functions -> funcion .) ]

    funcion                        shift and go to state 4
    functions                      shift and go to state 10

state 5

    (120) fnmain -> FN . MAIN LPAREN RPAREN LLLAVE programa RLLAVE
    (58) funcion -> FN . IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> FN . IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> FN . IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> FN . IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    MAIN            shift and go to state 11
    IDENTIFIER      shift and go to state 12


state 6

    (1) codigoRust -> functions fnmain . functions
    (2) codigoRust -> functions fnmain .
    (5) functions -> . funcion
    (6) functions -> . funcion functions
    (58) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> . FN IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> . FN IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> . FN IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    $end            reduce using rule 2 (codigoRust -> functions fnmain .)
    FN              shift and go to state 9

    functions                      shift and go to state 13
    funcion                        shift and go to state 4

state 7

    (120) fnmain -> FN . MAIN LPAREN RPAREN LLLAVE programa RLLAVE

    MAIN            shift and go to state 11


state 8

    (3) codigoRust -> fnmain functions .

    $end            reduce using rule 3 (codigoRust -> fnmain functions .)


state 9

    (58) funcion -> FN . IDENTIFIER LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> FN . IDENTIFIER LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> FN . IDENTIFIER LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> FN . IDENTIFIER LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    IDENTIFIER      shift and go to state 12


state 10

    (6) functions -> funcion functions .

    FN              reduce using rule 6 (functions -> funcion functions .)
    $end            reduce using rule 6 (functions -> funcion functions .)


state 11

    (120) fnmain -> FN MAIN . LPAREN RPAREN LLLAVE programa RLLAVE

    LPAREN          shift and go to state 14


state 12

    (58) funcion -> FN IDENTIFIER . LPAREN parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> FN IDENTIFIER . LPAREN RPAREN LLLAVE programa RLLAVE
    (60) funcion -> FN IDENTIFIER . LPAREN parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> FN IDENTIFIER . LPAREN RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    LPAREN          shift and go to state 15


state 13

    (1) codigoRust -> functions fnmain functions .

    $end            reduce using rule 1 (codigoRust -> functions fnmain functions .)


state 14

    (120) fnmain -> FN MAIN LPAREN . RPAREN LLLAVE programa RLLAVE

    RPAREN          shift and go to state 16


state 15

    (58) funcion -> FN IDENTIFIER LPAREN . parameters RPAREN LLLAVE programa RLLAVE
    (59) funcion -> FN IDENTIFIER LPAREN . RPAREN LLLAVE programa RLLAVE
    (60) funcion -> FN IDENTIFIER LPAREN . parameters RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (61) funcion -> FN IDENTIFIER LPAREN . RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE
    (63) parameters -> . IDENTIFIER COLON asig_data_type
    (64) parameters -> . IDENTIFIER COLON asig_data_type COMMA parameters
    (65) parameters -> . vacio
    (48) vacio -> .

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 19
    IDENTIFIER      shift and go to state 17

  ! RPAREN          [ reduce using rule 48 (vacio -> .) ]

    parameters                     shift and go to state 18
    vacio                          shift and go to state 20

state 16

    (120) fnmain -> FN MAIN LPAREN RPAREN . LLLAVE programa RLLAVE

    LLLAVE          shift and go to state 21


state 17

    (63) parameters -> IDENTIFIER . COLON asig_data_type
    (64) parameters -> IDENTIFIER . COLON asig_data_type COMMA parameters

    COLON           shift and go to state 22


state 18

    (58) funcion -> FN IDENTIFIER LPAREN parameters . RPAREN LLLAVE programa RLLAVE
    (60) funcion -> FN IDENTIFIER LPAREN parameters . RPAREN MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    RPAREN          shift and go to state 23


state 19

    (59) funcion -> FN IDENTIFIER LPAREN RPAREN . LLLAVE programa RLLAVE
    (61) funcion -> FN IDENTIFIER LPAREN RPAREN . MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    LLLAVE          shift and go to state 24
    MINUS           shift and go to state 25


state 20

    (65) parameters -> vacio .

    RPAREN          reduce using rule 65 (parameters -> vacio .)


state 21

    (120) fnmain -> FN MAIN LPAREN RPAREN LLLAVE . programa RLLAVE
    (7) programa -> . sentencias
    (8) programa -> . sentencias programa
    (49) sentencias -> . asignacion_variable SEMICOLON
    (50) sentencias -> . declaracion_variable SEMICOLON
    (51) sentencias -> . impresion SEMICOLON
    (52) sentencias -> . ingreso_datos SEMICOLON
    (53) sentencias -> . arreglos SEMICOLON
    (54) sentencias -> . control_structure
    (55) sentencias -> . llamada SEMICOLON
    (9) asignacion_variable -> . LET IDENTIFIER ASIG valor
    (10) asignacion_variable -> . LET MUT IDENTIFIER ASIG valor
    (11) asignacion_variable -> . LET IDENTIFIER COLON asignacion
    (12) asignacion_variable -> . LET MUT IDENTIFIER COLON asignacion
    (13) declaracion_variable -> . LET IDENTIFIER
    (14) declaracion_variable -> . LET MUT IDENTIFIER
    (15) declaracion_variable -> . LET IDENTIFIER COLON asig_data_type
    (16) declaracion_variable -> . LET MUT IDENTIFIER COLON asig_data_type
    (56) impresion -> . PRINTLN EXCLAMATION LPAREN valor RPAREN
    (57) impresion -> . PRINTLN EXCLAMATION LPAREN valor COMMA valores RPAREN
    (66) ingreso_datos -> . STD DOUBLE_COLON IO DOUBLE_COLON DOT STDIN LPAREN RPAREN DOT READLINE LPAREN REFERENCE MUT IDENTIFIER RPAREN
    (95) arreglos -> . LCORCH valores RCORCH
    (94) control_structure -> . condicional
    (118) llamada -> . IDENTIFIER LPAREN valores RPAREN
    (119) llamada -> . IDENTIFIER LPAREN RPAREN
    (103) condicional -> . IF comparacion LLLAVE programa RLLAVE
    (104) condicional -> . IF proposicion LLLAVE programa RLLAVE

    LET             shift and go to state 35
    PRINTLN         shift and go to state 37
    STD             shift and go to state 38
    LCORCH          shift and go to state 39
    IDENTIFIER      shift and go to state 36
    IF              shift and go to state 41

    programa                       shift and go to state 26
    sentencias                     shift and go to state 27
    asignacion_variable            shift and go to state 28
    declaracion_variable           shift and go to state 29
    impresion                      shift and go to state 30
    ingreso_datos                  shift and go to state 31
    arreglos                       shift and go to state 32
    control_structure              shift and go to state 33
    llamada                        shift and go to state 34
    condicional                    shift and go to state 40

state 22

    (63) parameters -> IDENTIFIER COLON . asig_data_type
    (64) parameters -> IDENTIFIER COLON . asig_data_type COMMA parameters
    (67) asig_data_type -> . data_type
    (68) asig_data_type -> . list_type
    (69) asig_data_type -> . tuple_type
    (72) data_type -> . CHAR
    (73) data_type -> . REFERENCE STR
    (74) data_type -> . signed_integer
    (75) data_type -> . unsigned_integer
    (76) data_type -> . float_type
    (77) data_type -> . BOOL
    (70) list_type -> . LCORCH some_data_type RCORCH
    (71) tuple_type -> . LPAREN some_data_type RPAREN
    (78) signed_integer -> . I8
    (79) signed_integer -> . I16
    (80) signed_integer -> . I32
    (81) signed_integer -> . I64
    (82) signed_integer -> . I128
    (83) signed_integer -> . ISIZE
    (84) unsigned_integer -> . U8
    (85) unsigned_integer -> . U16
    (86) unsigned_integer -> . U32
    (87) unsigned_integer -> . U64
    (88) unsigned_integer -> . U128
    (89) unsigned_integer -> . USIZE
    (90) float_type -> . F32
    (91) float_type -> . F64

    CHAR            shift and go to state 46
    REFERENCE       shift and go to state 47
    BOOL            shift and go to state 51
    LCORCH          shift and go to state 52
    LPAREN          shift and go to state 53
    I8              shift and go to state 54
    I16             shift and go to state 55
    I32             shift and go to state 56
    I64             shift and go to state 57
    I128            shift and go to state 58
    ISIZE           shift and go to state 59
    U8              shift and go to state 60
    U16             shift and go to state 61
    U32             shift and go to state 62
    U64             shift and go to state 63
    U128            shift and go to state 64
    USIZE           shift and go to state 65
    F32             shift and go to state 66
    F64             shift and go to state 67

    asig_data_type                 shift and go to state 42
    data_type                      shift and go to state 43
    list_type                      shift and go to state 44
    tuple_type                     shift and go to state 45
    signed_integer                 shift and go to state 48
    unsigned_integer               shift and go to state 49
    float_type                     shift and go to state 50

state 23

    (58) funcion -> FN IDENTIFIER LPAREN parameters RPAREN . LLLAVE programa RLLAVE
    (60) funcion -> FN IDENTIFIER LPAREN parameters RPAREN . MINUS RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    LLLAVE          shift and go to state 68
    MINUS           shift and go to state 69


state 24

    (59) funcion -> FN IDENTIFIER LPAREN RPAREN LLLAVE . programa RLLAVE
    (7) programa -> . sentencias
    (8) programa -> . sentencias programa
    (49) sentencias -> . asignacion_variable SEMICOLON
    (50) sentencias -> . declaracion_variable SEMICOLON
    (51) sentencias -> . impresion SEMICOLON
    (52) sentencias -> . ingreso_datos SEMICOLON
    (53) sentencias -> . arreglos SEMICOLON
    (54) sentencias -> . control_structure
    (55) sentencias -> . llamada SEMICOLON
    (9) asignacion_variable -> . LET IDENTIFIER ASIG valor
    (10) asignacion_variable -> . LET MUT IDENTIFIER ASIG valor
    (11) asignacion_variable -> . LET IDENTIFIER COLON asignacion
    (12) asignacion_variable -> . LET MUT IDENTIFIER COLON asignacion
    (13) declaracion_variable -> . LET IDENTIFIER
    (14) declaracion_variable -> . LET MUT IDENTIFIER
    (15) declaracion_variable -> . LET IDENTIFIER COLON asig_data_type
    (16) declaracion_variable -> . LET MUT IDENTIFIER COLON asig_data_type
    (56) impresion -> . PRINTLN EXCLAMATION LPAREN valor RPAREN
    (57) impresion -> . PRINTLN EXCLAMATION LPAREN valor COMMA valores RPAREN
    (66) ingreso_datos -> . STD DOUBLE_COLON IO DOUBLE_COLON DOT STDIN LPAREN RPAREN DOT READLINE LPAREN REFERENCE MUT IDENTIFIER RPAREN
    (95) arreglos -> . LCORCH valores RCORCH
    (94) control_structure -> . condicional
    (118) llamada -> . IDENTIFIER LPAREN valores RPAREN
    (119) llamada -> . IDENTIFIER LPAREN RPAREN
    (103) condicional -> . IF comparacion LLLAVE programa RLLAVE
    (104) condicional -> . IF proposicion LLLAVE programa RLLAVE

    LET             shift and go to state 35
    PRINTLN         shift and go to state 37
    STD             shift and go to state 38
    LCORCH          shift and go to state 39
    IDENTIFIER      shift and go to state 36
    IF              shift and go to state 41

    programa                       shift and go to state 70
    sentencias                     shift and go to state 27
    asignacion_variable            shift and go to state 28
    declaracion_variable           shift and go to state 29
    impresion                      shift and go to state 30
    ingreso_datos                  shift and go to state 31
    arreglos                       shift and go to state 32
    control_structure              shift and go to state 33
    llamada                        shift and go to state 34
    condicional                    shift and go to state 40

state 25

    (61) funcion -> FN IDENTIFIER LPAREN RPAREN MINUS . RIGHTARROW data_type LLLAVE programa retorno RLLAVE

    RIGHTARROW      shift and go to state 71


state 26

    (120) fnmain -> FN MAIN LPAREN RPAREN LLLAVE programa . RLLAVE

    RLLAVE          shift and go to state 72


state 27

    (7) programa -> sentencias .
    (8) programa -> sentencias . programa
    (7) programa -> . sentencias
    (8) programa -> . sentencias programa
    (49) sentencias -> . asignacion_variable SEMICOLON
    (50) sentencias -> . declaracion_variable SEMICOLON
    (51) sentencias -> . impresion SEMICOLON
    (52) sentencias -> . ingreso_datos SEMICOLON
    (53) sentencias -> . arreglos SEMICOLON
    (54) sentencias -> . control_structure
    (55) sentencias -> . llamada SEMICOLON
    (9) asignacion_variable -> . LET IDENTIFIER ASIG valor
    (10) asignacion_variable -> . LET MUT IDENTIFIER ASIG valor
    (11) asignacion_variable -> . LET IDENTIFIER COLON asignacion
    (12) asignacion_variable -> . LET MUT IDENTIFIER COLON asignacion
    (13) declaracion_variable -> . LET IDENTIFIER
    (14) declaracion_variable -> . LET MUT IDENTIFIER
    (15) declaracion_variable -> . LET IDENTIFIER COLON asig_data_type
    (16) declaracion_variable -> . LET MUT IDENTIFIER COLON asig_data_type
    (56) impresion -> . PRINTLN EXCLAMATION LPAREN valor RPAREN
    (57) impresion -> . PRINTLN EXCLAMATION LPAREN valor COMMA valores RPAREN
    (66) ingreso_datos -> . STD DOUBLE_COLON IO DOUBLE_COLON DOT STDIN LPAREN RPAREN DOT READLINE LPAREN REFERENCE MUT IDENTIFIER RPAREN
    (95) arreglos -> . LCORCH valores RCORCH
    (94) control_structure -> . condicional
    (118) llamada -> . IDENTIFIER LPAREN valores RPAREN
    (119) llamada -> . IDENTIFIER LPAREN RPAREN
    (103) condicional -> . IF comparacion LLLAVE programa RLLAVE
    (104) condicional -> . IF proposicion LLLAVE programa RLLAVE

    RLLAVE          reduce using rule 7 (programa -> sentencias .)
    RETURN          reduce using rule 7 (programa -> sentencias .)
    LET             shift and go to state 35
    PRINTLN         shift and go to state 37
    STD             shift and go to state 38
    LCORCH          shift and go to state 39
    IDENTIFIER      shift and go to state 36
    IF              shift and go to state 41

    sentencias                     shift and go to state 27
    programa                       shift and go to state 73
    asignacion_variable            shift and go to state 28
    declaracion_variable           shift and go to state 29
    impresion                      shift and go to state 30
    ingreso_datos                  shift and go to state 31
    arreglos                       shift and go to state 32
    control_structure              shift and go to state 33
    llamada                        shift and go to state 34
    condicional                    shift and go to state 40

state 28

    (49) sentencias -> asignacion_variable . SEMICOLON

    SEMICOLON       shift and go to state 74


state 29

    (50) sentencias -> declaracion_variable . SEMICOLON

    SEMICOLON       shift and go to state 75


state 30

    (51) sentencias -> impresion . SEMICOLON

    SEMICOLON       shift and go to state 76


state 31

    (52) sentencias -> ingreso_datos . SEMICOLON

    SEMICOLON       shift and go to state 77


state 32

    (53) sentencias -> arreglos . SEMICOLON

    SEMICOLON       shift and go to state 78


state 33

    (54) sentencias -> control_structure .

    LET             reduce using rule 54 (sentencias -> control_structure .)
    PRINTLN         reduce using rule 54 (sentencias -> control_structure .)
    STD             reduce using rule 54 (sentencias -> control_structure .)
    LCORCH          reduce using rule 54 (sentencias -> control_structure .)
    IDENTIFIER      reduce using rule 54 (sentencias -> control_structure .)
    IF              reduce using rule 54 (sentencias -> control_structure .)
    RLLAVE          reduce using rule 54 (sentencias -> control_structure .)
    RETURN          reduce using rule 54 (sentencias -> control_structure .)


state 34

    (55) sentencias -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 79


state 35

    (9) asignacion_variable -> LET . IDENTIFIER ASIG valor
    (10) asignacion_variable -> LET . MUT IDENTIFIER ASIG valor
    (11) asignacion_variable -> LET . IDENTIFIER COLON asignacion
    (12) asignacion_variable -> LET . MUT IDENTIFIER COLON asignacion
    (13) declaracion_variable -> LET . IDENTIFIER
    (14) declaracion_variable -> LET . MUT IDENTIFIER
    (15) declaracion_variable -> LET . IDENTIFIER COLON asig_data_type
    (16) declaracion_variable -> LET . MUT IDENTIFIER COLON asig_data_type

    IDENTIFIER      shift and go to state 80
    MUT             shift and go to state 81


state 36

    (118) llamada -> IDENTIFIER . LPAREN valores RPAREN
    (119) llamada -> IDENTIFIER . LPAREN RPAREN

    LPAREN          shift and go to state 82


state 37

    (56) impresion -> PRINTLN . EXCLAMATION LPAREN valor RPAREN
    (57) impresion -> PRINTLN . EXCLAMATION LPAREN valor COMMA valores RPAREN

    EXCLAMATION     shift and go to state 83


state 38

    (66) ingreso_datos -> STD . DOUBLE_COLON IO DOUBLE_COLON DOT STDIN LPAREN RPAREN DOT READLINE LPAREN REFERENCE MUT IDENTIFIER RPAREN

    DOUBLE_COLON    shift and go to state 84


state 39

    (95) arreglos -> LCORCH . valores RCORCH
    (97) valores -> . valor
    (98) valores -> . valor COMMA valores
    (38) valor -> . INTEGER
    (39) valor -> . FLOAT
    (40) valor -> . IDENTIFIER
    (41) valor -> . operacion
    (42) valor -> . indexacion
    (43) valor -> . arreglos
    (44) valor -> . STRING
    (45) valor -> . booleanos
    (110) operacion -> . numeric PLUS numeric
    (111) operacion -> . numeric MINUS numeric
    (112) operacion -> . numeric TIMES numeric
    (113) operacion -> . numeric DIVIDE numeric
    (114) operacion -> . numeric MOD numeric
    (115) operacion -> . numeric INTD numeric
    (116) operacion -> . cadena PLUS cadena
    (117) indexacion -> . IDENTIFIER LCORCH INTEGER RCORCH
    (95) arreglos -> . LCORCH valores RCORCH
    (46) booleanos -> . TRUE
    (47) booleanos -> . FALSE
    (105) numeric -> . INTEGER
    (106) numeric -> . FLOAT
    (107) numeric -> . IDENTIFIER
    (108) cadena -> . STRING
    (109) cadena -> . IDENTIFIER

    INTEGER         shift and go to state 87
    FLOAT           shift and go to state 88
    IDENTIFIER      shift and go to state 89
    STRING          shift and go to state 93
    LCORCH          shift and go to state 39
    TRUE            shift and go to state 97
    FALSE           shift and go to state 98

    valores                        shift and go to state 85
    valor                          shift and go to state 86
    operacion                      shift and go to state 90
    indexacion                     shift and go to state 91
    arreglos                       shift and go to state 92
    booleanos                      shift and go to state 94
    numeric                        shift and go to state 95
    cadena                         shift and go to state 96

state 40

    (94) control_structure -> condicional .

    LET             reduce using rule 94 (control_structure -> condicional .)
    PRINTLN         reduce using rule 94 (control_structure -> condicional .)
    STD             reduce using rule 94 (control_structure -> condicional .)
    LCORCH          reduce using rule 94 (control_structure -> condicional .)
    IDENTIFIER      reduce using rule 94 (control_structure -> condicional .)
    IF              reduce using rule 94 (control_structure -> condicional .)
    RLLAVE          reduce using rule 94 (control_structure -> condicional .)
    RETURN          reduce using rule 94 (control_structure -> condicional .)


state 41
